fix footer alignment

--- a/_css/frank.css
+++ b/_css/frank.css
@@ -122,14 +122,48 @@ html {
 }
 
 .page-foot {
+  display: flex;
+  flex-direction: column;
   font-size: 80%;
   font-family: InterUI;
   color: var(--color-alt-text);
   text-align: center;
+  justify-content: center;
   margin-top: 6em;
   border-top: 1px solid var(--color-grey-dark);
   padding-top: 2em;
   margin-bottom: 4em;
+  opacity: .8;
+}
+
+.copyright {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: center;
+  opacity: .8;
+}
+
+.copyright>*:not(:last-child) {
+  border-right: 1px solid var(--color-grey-dark);
+  padding: 0 15px
+}
+
+.copyright>*:last-child {
+  padding: 0 15px
+}
+
+@media (max-width: 900px) {
+  .copyright {
+    flex-direction: column;
+    margin-top: 10px
+ }
+}
+
+@media (max-width: 900px) {
+  .copyright>*:not(:last-child) {
+    border: none
+ }
 }
 
 /* ==================================================================
